<resources>
    <string name="app_name">AppCecy</string>
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="obligatorio">*Campo Requerido</string>
    <string name="olvidocontraseña">¿Olvidó su contraseña?</string>
    <string name="text1olvidocontraseña">Ingrese el correo electronico de su cuenta</string>
    <string name="title_activity_menu_drawer">MenuDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="contraseña">Contraseña</string>
    <string name="nombres">Nombre</string>
    <string name="celular">Celular</string>
    <string name="registrar">Registrarse</string>
    <string name="correo">E-Mail</string>
    <string name="apellidos">Apellidos</string>
    <string name="edad">Edad</string>
    <string name="direccion">Dirección</string>
</resources>
