<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/secondaryColor"
android:backgroundTint="@color/secondaryColor"
tools:context=".MainActivity">

<ImageView
    android:id="@+id/imageView"
    android:layout_width="wrap_content"
    android:layout_height="250dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0"
    app:srcCompat="@drawable/logo" />

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tvUsario"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColorHint="@color/textColor"
    app:errorEnabled="true"
    app:helperTextEnabled="true"
    app:hintAnimationEnabled="true"
    app:hintEnabled="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tv.IniciarSesión">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/imput.usuario"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:fontFamily="@font/rubik_regular"
        android:hint="@string/correo"
        android:inputType="text"
        android:textColorHint="@color/secondaryTextColor" />
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textInputLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:textColorHint="@color/textColor"
    app:errorEnabled="true"
    app:helperTextEnabled="true"
    app:hintAnimationEnabled="true"
    app:hintEnabled="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tvUsario">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/imput.contra"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:fontFamily="@font/rubik_regular"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:textColor="@color/textColor"
        android:textColorHint="@color/secondaryTextColor"
        app:errorEnabled="true"
        app:helperText="@string/obligatorio"
        app:helperTextEnabled="true"
        app:hintAnimationEnabled="true" />
</com.google.android.material.textfield.TextInputLayout>

<TextView
    android:id="@+id/tv.IniciarSesión"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="@font/rubik_regular"
    android:text="Iniciar Sesión"
    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView" />

<TextView
    android:id="@+id/tv.olvidarpass"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:linksClickable="false"
    android:text="@string/olvidocontraseña"
    android:textStyle="italic"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <Button
        android:id="@+id/but.iniciarsesion"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/rubik_regular"
        android:text="Iniciar Sesión"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv.olvidarpass" />

    <TextView
    android:id="@+id/tv.registro"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:fontFamily="@font/rubik_regular"
    android:text="¿No tienes cuenta?"
    android:textSize="18sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/but.iniciarsesion" />

<LinearLayout
    android:id="@+id/lay.inicio"
    android:layout_width="wrap_content"
    android:layout_height="40dp"
    android:layout_marginTop="16dp"
    android:clipToPadding="true"
    android:dividerPadding="20dp"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tv.registro">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:srcCompat="@drawable/ic_facebook" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:srcCompat="@drawable/ic_gmail" />

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>